[project]
name = "pykrozen"
version = "0.1.0"
description = "Lightweight HTTP + WebSocket Server (Development Use Only)"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "hlop3z", email = "23062270+hlop3z@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = []
keywords = [
    "http",
    "websocket",
    "server",
    "development",
    "lightweight",
    "plugin",
    "middleware",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/hlop3z/pykrozen"
Repository = "https://github.com/hlop3z/pykrozen"
Issues = "https://github.com/hlop3z/pykrozen/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pykrozen"]

[tool.pyright]
pythonVersion = "3.12"
reportMissingImports = "warning"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",      # R0903: SimpleNamespace subclasses don't need methods
    "missing-function-docstring",  # C0116: Private/override methods don't need docstrings
    "redefined-outer-name",        # W0621: Intentional for Plugin.setup(app) parameter
    "redefined-builtin",           # W0622: Required for BaseHTTPRequestHandler.log_message
    "invalid-name",                # C0103: do_GET/do_POST required by BaseHTTPRequestHandler
    "protected-access",            # W0212: Internal server loop access is intentional
    "consider-using-in",           # R1714: Style preference
    "too-many-branches",           # R0912: Complex routing logic requires many branches
    "too-many-arguments",          # R0913: Factory functions need multiple params
    "too-many-positional-arguments", # R0917: Factory functions need multiple params
    "too-many-locals",             # R0914: Handler methods need multiple locals
    "too-many-statements",         # R0915: Async handler is complex by necessity
    "too-many-lines",              # C0302: Single-file module design is intentional
    "line-too-long",               # C0301: Some complex lines are acceptable
    "missing-class-docstring",     # C0115: Internal helper classes don't need docstrings
    "broad-exception-caught",      # W0718: Intentional for server resilience
    "consider-using-enumerate",    # C0200: XOR loop is performance-critical
    "unused-argument",             # W0613: ws argument is required for interface compatibility
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pdoc>=16.0.0",
    "pylint>=4.0.3",
    "ruff>=0.14.1",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ssort>=0.15.0",
    "pyright>=1.1.407",
]
