[package]
name = "super-tests"
version = "0.1.0"
edition = "2021"
description = "Comprehensive testing tool for pykrozen HTTP/WebSocket server"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart"] }

# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Colored output
colored = "2.1"

# Progress bars and metrics
indicatif = "0.17"

# Time handling
chrono = "0.4"

# Statistics
statistical = "1.0"
